--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.3.0",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.2",
     "expo-permissions": "~13.1.1",
@@ -31,10 +34,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "socket.io-client": "^4.4.1",
-    "expo-camera": "~12.1.2",
     "redux": "^4.1.2",
-    "@react-native-community/datetimepicker": "4.0.0"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
