--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.3.0",
+    "@react-navigation/material-bottom-tabs": "^5.3.19",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-location": "~14.0.2",
     "expo-permissions": "~13.1.1",
     "expo-status-bar": "~1.2.0",
@@ -29,6 +31,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -36,8 +39,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
-    "socket.io-client": "^4.4.1",
-    "expo-linear-gradient": "~11.0.3"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
