--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/abril-fatface": "^0.2.2",
+    "@expo-google-fonts/dev": "^0.2.2",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo-google-fonts/source-code-pro": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -18,7 +24,9 @@
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-camera": "~12.1.2",
+    "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-location": "~14.0.2",
