--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
     "react-native-paper": "^4.11.2",
